@@ -40,6 +40,7 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
         self.context.filter_queries = []
         self.context.slow_query_threshold = 0
         self.context.effective_steps = 1
+        self.context.exclude_user = False
 
     def _initProperties(self, node):
         elems = node.getElementsByTagName('connection')
@@ -101,6 +102,9 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
                 elif child.nodeName == 'effective-steps':
                     value = int(str(child.getAttribute('value')))
                     self.context.effective_steps = value
+                elif child.nodeName == 'exclude-user':
+                    value = int(str(child.getAttribute('value')))
+                    self.context.exclude_user = value
 
     def _createNode(self, name, value):
         node = self._doc.createElement(name)
@@ -148,6 +152,8 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
             str(self.context.slow_query_threshold)))
         append(create('effective-steps',
             str(self.context.effective_steps)))
+        append(create('exclude-user',
+            str(self.context.exclude_user)))
         return node
 
 
